# django-sql-tagger

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
django_sql_tagger/: __init__.py  apps.py  tagging.py  transaction.py
testsite/: pytest.ini
testsite/testapp/: models.py  tests.py
testsite/testapp/management/commands/: example.py
testsite/testapp/migrations/: 0001_initial.py
testsite/testsite/: asgi.py  settings.py  urls.py  wsgi.py
